<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="USER_CHOISE">user_choise</string>
    <string name="app_name">CTD Navigation Demo</string>
    <string name="your_choice">Your Choice</string>
    <string name="ai_choice">AI Choice</string>
    <string name="play_again">Play Again</string>
    <string name="painting">Painting</string>
    <string name="select_option">Select an option to play</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="welcome">Welcome to Rock Paper Scissors</string>
    <string name="play">Play</string>
    <string name="won">You won!</string>
    <string name="lost">You lost!</string>
    <string name="tied">You tied!</string>

</resources>
